--- a/V2/manifest.json
+++ b/V2/manifest.json
@@ -3,10 +3,8 @@
   "name": "Nkọwa okwu",
   "version": "0.1",
   "icons": {
-    "48": "icons/Dictionary-48.png",
-    "64": "icons/Dictionary-64.png",
-    "96": "icons/Dictionary-96.png",
-    "128": "icons/Dictionary-128.png"
+    "48": "icons/icon48.png",
+    "96": "icons/icon96.png"
   },
   "content_scripts": [
     {
