tidy files, updates to manifest and readme

--- a/V1/manifest.json
+++ b/V1/manifest.json
@@ -19,8 +19,8 @@
 	},
 	"background": {
 		"scripts": [
-			"shortcut.js",
-			"wordsearch.js"
+			"scripts/shortcut.js",
+			"scripts/wordsearch.js"
 		]
 	},
 	"browser_action": {
