--- a/V2/manifest.json
+++ b/V2/manifest.json
@@ -4,11 +4,20 @@
   "version": "0.1",
   "permissions": [
     "storage",
-    "https://www.google.com/"
+    "https://www.google.com/",
+    "activeTab",
+    "contextMenus"
   ],
   "icons": {
     "48": "icons/icon48.png",
     "96": "icons/icon96.png"
+  },
+  "chrome_settings_overrides": {
+    "search_provider": {
+      "name": "Nkọwa okwu",
+      "keyword": "@test",
+      "search_url": "https://nkowaokwu.com/search?word={searchTerms}"
+    }
   },
   "content_scripts": [
     {
@@ -16,15 +25,20 @@
         "<all_urls>"
       ],
       "js": [
-        "common/browser-polyfill.js",
-        "content_scripts/dictionary.js"
+        "scripts/browser-polyfill.js",
+        "scripts/dictionary.js"
       ]
     }
   ],
   "background": {
     "scripts": [
-      "common/browser-polyfill.js"
+      "scripts/browser-polyfill.js",
+      "scripts/shortcut.js",
+      "scripts/wordsearch.js"
     ],
     "persistent": false
+  },
+  "browser_action": {
+    "default_icon": "icons/icon32.png"
   }
 }
